# TileLauncher

./: CMakeLists.txt  README.md  tile_editor.py  tile_launcher.py  tiles.ini
.github/workflows/: build.yml
resources/: app.qrc  app.rc
src/: AppData.cpp  AppData.h  Logger.cpp  Logger.h  TileLauncher.cpp  TileLauncher.h  main.cpp
